--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,90 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    color: #3c3c3c;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: underline;
+    color: #3c3c3c; 
+}
+
+.navCabecalho {
+    width: fit-content;
+    display: inline-block;
+}
+
+header {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #cdcdcd;
+    padding: 10px;
+
+    & #cabecalho{
+        margin: auto;
+        max-width: 900px;
+    }
+    
+    &   li {
+        display: inline-block;
+    }
+
+    & ul {
+        margin-left: 600px;
+    }
+}
+
+
+#titulo {
+    text-align: center;
+    margin: 20px auto 300px;
+
+    & h1 {
+        font-size: 40px;
+        margin-bottom: 16px;
+    }
+
+    & p {
+        font-size: 18px;
+    }
+}
+
+
+
+footer {
+    background-color: #f5f5f5;
+    border-top: 1px solid #cdcdcd;
+    
+    & #sessaoCartoes {
+        text-align: center;
+        border-bottom: 1px solid #ffffff;
+    }
+
+    & .cartao {
+        max-width: 300px;
+        border: 1px solid #cdcdcd;
+        padding: 10px;
+
+        display: inline-block;
+
+        margin: 20px;
+    }
+
+
+    & .tituloCartao {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+
+    & #agradecimento {
+        text-align: center;
+        padding: 20px;
+    }
+}
+
+
